multi-cluster/deployment-us-east-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-us-east-1
spec:
  replicas: 5
  selector:
    matchLabels:
      app: hello-world
      region: us-east-1
  template:
    metadata:
      labels:
        app: hello-world
        region: us-east-1
    spec:
      nodeSelector:
        failure-domain.beta.kubernetes.io/region: us-east-1
      containers:
      - image: adamgolab/hello-world
        name: hello-world
        ports:
        - containerPort: 80
